# Support

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
support/: admin.py  models.py  serializer.py  service.py  tasks.py  tests.py  urls.py  views.py
support/migrations/: 0001_initial.py  0002_delete_support.py  0003_alter_message_status.py  0004_alter_message_status.py
users/: models.py  signals.py
users/migrations/: 0001_initial.py
